<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SalutationActivity" >

    <TextView
        android:id="@+id/headerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/heading"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerTxt"
        android:layout_marginTop="27dp"
        android:text="@string/firstNameStr" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:text="@string/lastNameStr" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="23dp"
        android:text="@string/genderStr" />

    <EditText
        android:id="@+id/firstNameTxtBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/firstNameHint"
        android:inputType="text"
        android:textSize="12sp"
        android:width="120dp" />

    <EditText
        android:id="@+id/lastNameTxtBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/firstNameTxtBx"
        android:ems="10"
        android:hint="@string/LastNameHint"
        android:inputType="text"
        android:textSize="12sp"
        android:width="120dp" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lastNameTxtBx"
        android:layout_alignTop="@+id/textView4" >

        <RadioButton
            android:id="@+id/femaleRadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/femaleStr"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/maleRadBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maleStr"
            android:textSize="14sp" />

    </RadioGroup>

    <Button
        android:id="@+id/salutationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_toLeftOf="@+id/lastNameTxtBx"
        android:text="@string/salutationStr"
        android:textSize="14sp" />

</RelativeLayout>